# bancho-service-rs

./: .env.example  CODEOWNERS  Cargo.toml  Dockerfile
.github/workflows/: production-deploy.yml
bancho-service-macros/: Cargo.toml
bancho-service-macros/src/: lib.rs
chart/: values.yaml
k8s/: cronjob.yaml
macros/: Cargo.toml
macros/src/: lib.rs
scripts/: entrypoint.sh
src/: lib.rs  lifecycle.rs  main.rs  settings.rs
src/adapters/: beatmaps_service.rs  discord.rs  ip_api.rs  mod.rs  performance_service.rs
src/api/: health.rs  mod.rs
src/api/osu/: bancho.rs
src/api/v1/: mod.rs  ripple.rs
src/commands/: command_handler.rs  from_args.rs  misc.rs  mod.rs  mp.rs  staff.rs  system.rs  test.rs
src/common/: axum_ip.rs  chat.rs  context.rs  env.rs  error.rs  init.rs  location.rs  mod.rs  osu_assets.rs  redis_json.rs  redis_pool.rs  state.rs  website.rs
src/entities/: badges.rs  bancho_settings.rs  beatmaps.rs  bot.rs  channels.rs  gamemodes.rs  hardware_logs.rs  match_events.rs  messages.rs  mod.rs  multiplayer.rs  presences.rs  relationships.rs  scores.rs  sessions.rs  stats.rs  streams.rs  tillerino.rs  user_reports.rs  users.rs
src/events/: add_friend.rs  cant_spectate.rs  change_action.rs  channel_join.rs  channel_leave.rs  chat.rs  lobby_join.rs  lobby_leave.rs  login.rs  logout.rs  match_change_mods.rs  match_change_settings.rs  match_change_slot.rs  match_change_team.rs  match_create.rs  match_failed.rs  match_has_beatmap.rs  match_invite.rs  match_join.rs  match_leave.rs  match_loaded.rs  match_lock_slot.rs  match_no_beatmap.rs  match_not_ready.rs  match_player_complete.rs  match_ready.rs  match_request_skip.rs  match_start.rs  match_transfer_host.rs  match_update_score.rs  mod.rs  private_chat_message.rs  public_chat_message.rs  receive_updates.rs  remove_friend.rs  request_all_presences.rs  request_presences.rs  set_afk_message.rs  spectate_frames.rs  start_spectating.rs  (+7 more)
src/models/: badges.rs  bancho.rs  beatmaps.rs  channels.rs  hardware_logs.rs  location.rs  messages.rs  mod.rs  multiplayer.rs  performance.rs  presences.rs  privileges.rs  relationships.rs  ripple.rs  scores.rs  sessions.rs  stats.rs  tillerino.rs  user_reports.rs  users.rs
src/repositories/: badges.rs  bancho_settings.rs  beatmaps.rs  channels.rs  hardware_logs.rs  ip_logs.rs  match_events.rs  match_games.rs  messages.rs  mod.rs  multiplayer.rs  presences.rs  relationships.rs  scores.rs  sessions.rs  spectators.rs  stats.rs  streams.rs  tillerino.rs  user_reports.rs  users.rs
src/usecases/: badges.rs  bancho_settings.rs  beatmaps.rs  channels.rs  hardware_logs.rs  location.rs  match_events.rs  messages.rs  mod.rs  multiaccounts.rs  multiplayer.rs  performance.rs  presences.rs  relationships.rs  ripple.rs  scores.rs  sessions.rs  spectators.rs  stats.rs  streams.rs  tillerino.rs  user_reports.rs  users.rs
src/workers/: mod.rs
src/workers/crons/: mod.rs  tasks.rs
src/workers/crons/cleanup_cron/: mod.rs
src/workers/crons/cleanup_cron/tasks/: cleanup_sessions.rs  cleanup_streams.rs  mod.rs
src/workers/daemons/: mod.rs
src/workers/daemons/pubsub_consumer/: mod.rs
src/workers/daemons/pubsub_consumer/handlers/: ban.rs  change_username.rs  disconnect.rs  mod.rs  notification.rs  silence.rs  unban.rs  update_cached_stats.rs  wipe.rs
workers/bancho-cron/: Cargo.toml
workers/bancho-cron/src/: main.rs  tasks.rs
workers/bancho-cron/src/tasks/: cleanup_sessions.rs  cleanup_streams.rs
