[package]
name = "bancho-service"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
axum = "0.8.4"
bancho-service-macros = { path = "./macros" }
bancho-protocol = { git = "https://github.com/infernalfire72/bancho-protocol" }
bcrypt = "0.17.0"
bitflags = "2.9.1"
chrono = { version = "0.4", features = ["default", "serde"] }
const-str = "0.6.2"
deadpool = { version = "0.12", features = ["managed", "rt_tokio_1"] }
dotenv = "0.15"
hashbrown = "0.15"
rand = "0.9.1"
redis = { version = "0.31", features = ["aio", "tokio-comp", "default", "hashbrown", "json", "uuid"] }
reqwest = { version = "0.12", features = ["json"] }
serde = "1.0"
serde_json = "1.0"
sqlx = { version = "0.8.6", features = ["default", "runtime-tokio", "chrono", "mysql"] }
tokio = { version = "1.45", features = ["rt-multi-thread", "macros", "net"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
uuid = { version = "1.17", features = ["default", "fast-rng", "v4", "serde"] }