[workspace]
members = [
    ".",
    "bancho-service-macros",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.88.0"

[package]
name = "bancho-service"
rust-version.workspace = true
version.workspace = true
edition.workspace = true

[workspace.dependencies]
bancho-service-macros = { version = "=0.1.0", path = "bancho-service-macros" }

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
axum = "0.8.8"
bancho-protocol = { git = "https://github.com/infernalfire72/bancho-protocol" }
bancho-service-macros = { workspace = true }
bcrypt = "0.18.0"
bitflags = "2.11.0"
chrono = { version = "0.4", features = ["default", "serde"] }
const-str = "1.1.0"
deadpool = { version = "0.13", features = ["managed", "rt_tokio_1"] }
dedent = "0.1.1"
discord-webhook2 = "0.4.3"
dotenv = "0.15"
hashbrown = "0.16.1"
iso8601-timestamp = "0.1.11"
rand = "0.9.1"
redis = { version = "0.32.7", features = ["aio", "tokio-comp", "default", "hashbrown", "json", "uuid", "safe_iterators"] }
reqwest = { version = "0.13.2", features = ["json", "query"] }
rust_decimal = "1.37.1"
serde = "1.0"
serde_json = "1.0"
socket2 = "0.6"
sqlx = { version = "0.8.6", features = ["default", "runtime-tokio", "chrono", "rust_decimal", "mysql"] }
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros", "net"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
uuid = { version = "1.21", features = ["default", "fast-rng", "v4", "serde"] }